# Langchain_Learning_and_projects

./: pyproject.toml  test.py
Output_parsers/: output_parser_app.py  output_parsers.py  output_parsers_app2.py
RAG/: loaders.py  test.csv  web_base_laoder.py
Runnables/: runnable_app.py  runnables.py  runnables2.py
prompts/: prompts.py
pydantic/: pydantic_basics.py
reliability_features/: customer_suport.py  with_fallbacks.py  with_retry.py
