[project]
name = "langchain-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "pandas",
    "langchain-huggingface",
    "dotenv",
    "langchain-ollama>=1.1.0",
    "reportlab",
    "langchain_community",
    "pypdf",
    "bs4"
]
